Adjusted CSS for Products Page

--- a/app/views/home/products.html.erb
+++ b/app/views/home/products.html.erb
@@ -14,7 +14,7 @@
         <div class="row">
 
             <div class="col-md-3">
-                <p class="lead">Categories</p>
+                <h1 class="page-header">Products</h1>
                 <div class="list-group">
                     <a href="#" class="list-group-item">Clinical</a>
                     <a href="#" class="list-group-item">Reception Desks</a>
@@ -23,7 +23,7 @@
             </div>
 
             <div class="col-md-9">
-
+                <h1></h1>
                 <div class="row carousel-holder">
 
                     <div class="col-md-12">
