--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -48,7 +48,7 @@
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
                     <div class="caption">
                         <h3>Chris Pham<br>
-                            <small>CEO/Designer</small>
+                            <small>CEO/Cad Engineer</small>
                         </h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
                         <ul class="list-inline">
@@ -67,7 +67,7 @@
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
                     <div class="caption">
                         <h3>Sean Brightman<br>
-                            <small>Accounting/Purchasing Officer</small>
+                            <small>CFO/CTO</small>
                         </h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
                         <ul class="list-inline">
@@ -105,7 +105,7 @@
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
                     <div class="caption">
                         <h3>Wuth<br>
-                            <small>CNC Engineer</small>
+                            <small>CAD Engineer/CNC Machinist</small>
                         </h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
                         <ul class="list-inline">
@@ -142,7 +142,7 @@
                 <div class="thumbnail">
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
                     <div class="caption">
-                        <h3>John Smith<br>
+                        <h3>John Doe<br>
                             <small>Job Title</small>
                         </h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
