--- a/app/views/home/gallery.html.erb
+++ b/app/views/home/gallery.html.erb
@@ -14,11 +14,9 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Gallery
-                    <small>Residential</small>
-                </h1>
+                <h1 class="page-header">Gallery</h1>
                 <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
+                    <li><a href="index.html.erb">Home</a>
                     </li>
                     <li class="active">Residential Gallery</li>
                 </ol>
@@ -132,12 +130,6 @@
                     </li>
                     <li>
                         <a href="#">3</a>
-                    </li>
-                    <li>
-                        <a href="#">4</a>
-                    </li>
-                    <li>
-                        <a href="#">5</a>
                     </li>
                     <li>
                         <a href="#">&raquo;</a>
