got postgresql working

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -124,7 +124,7 @@
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
                     <div class="caption">
                         <h3>The Guys<br>
-                            <small>Job Title</small>
+                            <small>Builders</small>
                         </h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
                         <ul class="list-inline">
