--- a/app/views/home/services.html.erb
+++ b/app/views/home/services.html.erb
@@ -48,7 +48,7 @@
                     </div>
                     <div class="panel-body">
                         <h4>Draft</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <p>Need help coming up with ideas for your commercial location? Let us help you!</p>
                         <a href="#" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
                     </div>
                     <div class="panel-body">
                         <h4>CAD</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <p>Have an idea but no engineer to piece it together? We'll put it in CAD for you!</p>
                         <a href="#" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
