--- a/app/views/home/products.html.erb
+++ b/app/views/home/products.html.erb
@@ -16,9 +16,10 @@
             <div class="col-md-3">
                 <h1 class="page-header">Products</h1>
                 <div class="list-group">
-                    <a href="#" class="list-group-item">Clinical</a>
+                    <a href="#" class="list-group-item">Residential</a>
                     <a href="#" class="list-group-item">Reception Desks</a>
                     <a href="#" class="list-group-item">Clinical</a>
+                    <a href="#" class="list-group-item">Salon</a>
                 </div>
             </div>
 
