--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -56,39 +56,39 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    Welcome to Solid Solutions Design
+                    <center>Solid Solutions Design</center>
                 </h1>
             </div>
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-check"></i> Commercial </h4>
+                        <h4><i class="fa fa-fw fa-check"></i><center> Commercial </center></h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="#" class="btn btn-default">Learn More</a>
+                        <p>We have Designed and Manufactured many different designs and styles for many commercial sites including restaurants, retails stores, offices, and nail salons.</p>
+                        <center><a href="#" class="btn btn-default">Take a Look!</a></center>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-gift"></i> Residential </h4>
+                        <h4><i class="fa fa-fw fa-gift"></i><center> Residential </center></h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="#" class="btn btn-default">Learn More</a>
+                        <p>While we primarily specialize in Clinical and Commercial fixtures, we do design and manufacture together with Joshua Cabinetry for residential designs.</p>
+                        <center><a href="#" class="btn btn-default">Take a Look!</a></center>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-compass"></i> Clinical </h4>
+                        <h4><i class="fa fa-fw fa-compass"></i><center> Clinical </center></h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="#" class="btn btn-default">Learn More</a>
+                        <p>Our clinical designs follow that of a basic dentist or doctor's office. While we do keep some of our designs basic, we also like to get creative in our designs!</p>
+                        <center><a href="#" class="btn btn-default">Take a Look!</a></center>
                     </div>
                 </div>
             </div>
@@ -137,7 +137,11 @@
                     <li>Test</li>
                     <li>Deliver</li>
                 </ul>
-                <p>Solid Solutions Design is a company that designs and manufactures cabinetry according to clients' needs. Our products are handmade and may be customized per customer request. Whether it is a starting small business or simply remodeling, we are guaranteed to provide quality designs and solutions to satisfy your demands.</p>
+                <p>Solid Solutions Design is a company that designs and manufactures cabinetry according to clients' needs. Our products are handmade and may be customized per customer request. Whether it is a starting small business or simply remodeling, we are guaranteed to provide quality designs and solutions to satisfy your demands.
+
+                    OR
+
+                Solid Solutions Design will help design, engineer, and build all your cabinet and fixture needs. To salon owners, please check out our clearance page of the photo album. Details & specs are currently being updated.</p>
             </div>
             <div class="col-md-6">
                 <img class="img-responsive" src="http://placehold.it/700x450" alt="">
