--- a/app/views/home/products.html.erb
+++ b/app/views/home/products.html.erb
@@ -14,11 +14,22 @@
         <div class="row">
 
             <div class="col-md-3">
-                <h1 class="page-header">Products</h1>
+                
                 <div class="list-group">
-                    <a href="#" class="list-group-item">Residential</a>
-                    <a href="#" class="list-group-item">Reception Desks</a>
+                    <!-- Page Heading/Breadcrumbs -->
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="page-header">Products
+                </h1>
+                <ol class="breadcrumb">
+                    <li><%= link_to "Home", root_path %></li>
+                    <li class="active">Products</li>
+                </ol>
+            </div>
+        </div>
                     <a href="#" class="list-group-item">Clinical</a>
+                    <a href="#" class="list-group-item">Commercial</a>
+                    <a href="#" class="list-group-item">Residential</a>
                     <a href="#" class="list-group-item">Salon</a>
                 </div>
             </div>
