--- a/app/views/home/services.html.erb
+++ b/app/views/home/services.html.erb
@@ -16,8 +16,7 @@
                 <h1 class="page-header">Services
                 </h1>
                 <ol class="breadcrumb">
-                    <li><a href="home#index">Home</a>
-                    </li>
+                    <li><%= link_to "Home", root_path %></li>
                     <li class="active">Services</li>
                 </ol>
             </div>
@@ -48,8 +47,8 @@
                     </div>
                     <div class="panel-body">
                         <h4>Draft</h4>
-                        <p>Need help coming up with ideas for your commercial location? Let us help you!</p>
-                        <a href="#" class="btn btn-primary">Learn More</a>
+                        <p>Need help coming up with ideas for your commercial location? We'll set up a consultation meeting to help you draft these ideas.</p>
+                        <a href="service-one" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -63,7 +62,7 @@
                     </div>
                     <div class="panel-body">
                         <h4>CAD</h4>
-                        <p>Have an idea but no engineer to piece it together? We'll put it in CAD for you!</p>
+                        <p>Our Engineers will put your drafted idea into a CAD program for you to get a better view of what you're building.</p>
                         <a href="#" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
@@ -78,7 +77,7 @@
                     </div>
                     <div class="panel-body">
                         <h4>Manufacture</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <p>Once you've been through the draft and CAD process, we will send the completed file down the line to be manufactured in our facility.</p>
                         <a href="#" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
@@ -93,7 +92,7 @@
                     </div>
                     <div class="panel-body">
                         <h4>Delivery/Installation</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <p>Local customers are offered a delivery service and once the materials are on site, we will also install your products for you.</p>
                         <a href="#" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
@@ -160,7 +159,7 @@
                     </div>
                     <div class="media-body">
                         <h4 class="media-heading">Repairs</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo itaque ipsum sit harum.</p>
+                        <p>Repairs include: delaminating issues, chipped wooden fixtures, scratches, missing parts, broken fixtures.</p>
                     </div>
                 </div>
                 <div class="media">
@@ -172,7 +171,7 @@
                     </div>
                     <div class="media-body">
                         <h4 class="media-heading">Shipping</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo itaque ipsum sit harum.</p>
+                        <p>Provide us with your address and we will help set up Shipping for your products.</p>
                     </div>
                 </div>
                 <div class="media">
@@ -184,7 +183,7 @@
                     </div>
                     <div class="media-body">
                         <h4 class="media-heading">Remodeling</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo itaque ipsum sit harum.</p>
+                        <p>We will head out to your location after multiple conultations to remodel your site.</p>
                     </div>
                 </div>
             </div>
