--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -65,7 +65,7 @@
                         <h4><i class="fa fa-fw fa-check"></i><center> Commercial </center></h4>
                     </div>
                     <div class="panel-body">
-                        <p>We have Designed and Manufactured many different designs and styles for many commercial sites including restaurants, retails stores, offices, and nail salons.</p>
+                        <p>We have Designed and Manufactured a variety of designs and styles for many commercial sites including restaurants, retails stores, offices, and nail salons.</p>
                         <center><a href="#" class="btn btn-default">Take a Look!</a></center>
                     </div>
                 </div>
@@ -133,15 +133,11 @@
                 <ul>
                     <li>Draft</li>
                     <li>Design</li>
-                    <li>Maufacture</li>
-                    <li>Test</li>
+                    <li>Manufacture</li>
                     <li>Deliver</li>
                 </ul>
-                <p>Solid Solutions Design is a company that designs and manufactures cabinetry according to clients' needs. Our products are handmade and may be customized per customer request. Whether it is a starting small business or simply remodeling, we are guaranteed to provide quality designs and solutions to satisfy your demands.
-
-                    OR
-
-                Solid Solutions Design will help design, engineer, and build all your cabinet and fixture needs. To salon owners, please check out our clearance page of the photo album. Details & specs are currently being updated.</p>
+                <p>
+                Solid Solutions Design will help design, engineer, and build all your cabinet and fixture needs. Our products are handmade from raw material and may be customized per customer request. Whether it is a starting small business or simply remodeling, we are guaranteed to provide quality designs and solutions to satisfy your demands.</p>
             </div>
             <div class="col-md-6">
                 <img class="img-responsive" src="http://placehold.it/700x450" alt="">
