--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -28,7 +28,7 @@
         <!-- Content Row -->
         <div class="row">
             <!-- Map Column -->
-            <div class="col-md-8">
+            <div class="col-md-8 map-responsive">
                 <!-- Embedded Google Map -->
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3311.7847978017858!2d-84.29159478518291!3d33.895195833438045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f509c9b04cc8bb%3A0xc6dcff1904613d81!2s5665+New+Peachtree+Rd%2C+Chamblee%2C+GA+30341!5e0!3m2!1sen!2sus!4v1447202090305" width="750" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
@@ -44,7 +44,7 @@
                     <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">customerservice@ssdmfg.com</a>
                 </p>
                 <p><i class="fa fa-clock-o"></i> 
-                    <abbr title="Hours">H</abbr>: Monday - Friday: 9:00 AM to 5:00 PM</p>
+                    <abbr title="Hours">H</abbr>: Monday - Friday: 9:00 AM to 4:00 PM</p>
                 <ul class="list-unstyled list-inline list-social-icons">
                     <li>
                         <a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
@@ -62,7 +62,6 @@
             </div>
         </div>
         <!-- /.row -->
-
         <!-- Contact Form -->
         <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
         <div class="row">
@@ -99,6 +98,20 @@
                     <button type="submit" class="btn btn-primary">Send Message</button>
                 </form>
             </div>
+
+            <div class="col-md-4">
+                    <h4>
+                        <p>Interested in our Services or Products?</p>
+                        <p>Have an inquiry or requesting a quote?</p>
+                        <p>Send us a message with your questions or concerns and we will do our best to get back to you with an accurate response!</p>
+                    </h4>
+                    <h3>
+                        <p>Ready to place an order?</p>
+                    <a class="btn btn-default btn-block" <%= link_to "Order Now", home_contact_path %></a>
+                    </h3>
+                </ul>
+            </div>
+        </div>
 
         </div>
         <!-- /.row -->
