changes made to services

--- a/app/views/home/services.html.erb
+++ b/app/views/home/services.html.erb
@@ -116,23 +116,20 @@
 
                 <div id="myTabContent" class="tab-content">
                     <div class="tab-pane fade active in" id="service-one">
-                        <h4>Draft</h4>
-                        <p>Drafting with us includes consultations that involve multiple procedures. You will first meet with the engineer who will be drafting your fixture and finding out exactly what you want to be built. Once this process is complete, the engineer will be sent to the location to take accurate measurements. Once measurements have been recorded the drafting begins and an estimate will be applied.</p>
+                        <h4>Draft/Quote</h4>
+                        <p>Drafting with us includes consultations that involve multiple procedures. You will first meet with the engineer who will be drafting your fixture and finding out exactly what you want to be built. Once this process is complete, the engineer will be sent to the location to take accurate measurements. Once measurements have been recorded the drafting begins and an estimate will be applied. Once the drafting is complete we will send a Quote for the Designing and Manufacturing process to allow you to determine if you would like to proceed with our services.</p>
                     </div>
                     <div class="tab-pane fade" id="service-two">
                         <h4>CAD</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae repudiandae fugiat illo cupiditate excepturi esse officiis consectetur, laudantium qui voluptatem. Ad necessitatibus velit, accusantium expedita debitis impedit rerum totam id. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus quibusdam recusandae illum, nesciunt, architecto, saepe facere, voluptas eum incidunt dolores magni itaque autem neque velit in. At quia quaerat asperiores.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae repudiandae fugiat illo cupiditate excepturi esse officiis consectetur, laudantium qui voluptatem. Ad necessitatibus velit, accusantium expedita debitis impedit rerum totam id. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus quibusdam recusandae illum, nesciunt, architecto, saepe facere, voluptas eum incidunt dolores magni itaque autem neque velit in. At quia quaerat asperiores.</p>
+                        <p>Using CAD software we will take the draft produced earlier and begin designing the product you requested! This process generally takes a few weeks as we allow precision and accuracy to be our number one priority. Once this process is complete, you will have the option to see your product rendered in digital 3D format for a better look at how it will look in your business or residential area. </p>
                     </div>
                     <div class="tab-pane fade" id="service-three">
                         <h4>Manufacture</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae repudiandae fugiat illo cupiditate excepturi esse officiis consectetur, laudantium qui voluptatem. Ad necessitatibus velit, accusantium expedita debitis impedit rerum totam id. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus quibusdam recusandae illum, nesciunt, architecto, saepe facere, voluptas eum incidunt dolores magni itaque autem neque velit in. At quia quaerat asperiores.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae repudiandae fugiat illo cupiditate excepturi esse officiis consectetur, laudantium qui voluptatem. Ad necessitatibus velit, accusantium expedita debitis impedit rerum totam id. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus quibusdam recusandae illum, nesciunt, architecto, saepe facere, voluptas eum incidunt dolores magni itaque autem neque velit in. At quia quaerat asperiores.</p>
+                        <p>The process of manufacturing your product will take place in our own factory. Running through our line of production your product will be fabricated as illustrated by the design generated in the CAD process. Before releasing, your product will be handled by our floor team to ensure quality is met.  </p>
                     </div>
                     <div class="tab-pane fade" id="service-four">
                         <h4>Deliver/Installation</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae repudiandae fugiat illo cupiditate excepturi esse officiis consectetur, laudantium qui voluptatem. Ad necessitatibus velit, accusantium expedita debitis impedit rerum totam id. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus quibusdam recusandae illum, nesciunt, architecto, saepe facere, voluptas eum incidunt dolores magni itaque autem neque velit in. At quia quaerat asperiores.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae repudiandae fugiat illo cupiditate excepturi esse officiis consectetur, laudantium qui voluptatem. Ad necessitatibus velit, accusantium expedita debitis impedit rerum totam id. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus quibusdam recusandae illum, nesciunt, architecto, saepe facere, voluptas eum incidunt dolores magni itaque autem neque velit in. At quia quaerat asperiores.</p>
+                        <p> Unfortunately we only deliver to local businesses and residential areas. We do however offer various shipping methods depending on the size and weight of your product. If you need the product shipped then we will quote you on shipping before proceeding with the delivery process of your product. Alternatively, you can schedule your own shipment methods such as "Pick-Up" or have it shipped through a preferred carrier of your choice.</p>
                     </div>
                 </div>
 
@@ -179,7 +176,19 @@
                     </div>
                     <div class="media-body">
                         <h4 class="media-heading">Remodeling</h4>
-                        <p>We will head out to your location after multiple consultations to remodel your home or .</p>
+                        <p>We will head out to your location after multiple consultations to remodel your home or business area.</p>
+                    </div>
+                </div>
+                <div class="media">
+                    <div class="pull-left">
+                        <span class="fa-stack fa-2x">
+                              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                              <i class="fa fa-support fa-stack-1x fa-inverse"></i>
+                        </span> 
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">3D Rendering</h4>
+                        <p>After a Quote and completed CAD of the product have been delivered, we will render a digital model of your business to give you a better idea of what the final product will look like in your area or business.</p>
                     </div>
                 </div>
             </div>
