--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -59,6 +59,16 @@
                     <center>Solid Solutions Design</center>
                 </h1>
             </div>
+            
+        </div>
+        <!-- /.row -->
+
+        <!-- Portfolio Section -->
+        <div class="row">
+            <div class="col-lg-12">
+                <h2 class="page-header">Gallery</h2>
+            </div>
+
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
@@ -66,7 +76,7 @@
                     </div>
                     <div class="panel-body">
                         <p>We have Designed and Manufactured a variety of designs and styles for many commercial sites including restaurants, retails stores, offices, and nail salons.</p>
-                        <center><a href="#" class="btn btn-default">Take a Look!</a></center>
+                        <center><a class="btn btn-default" <%= link_to "Take a Look!", gallery_commercial_path%> </a></center>
                     </div>
                 </div>
             </div>
@@ -76,8 +86,8 @@
                         <h4><i class="fa fa-fw fa-gift"></i><center> Residential </center></h4>
                     </div>
                     <div class="panel-body">
-                        <p>While we primarily specialize in Clinical and Commercial fixtures, we do design and manufacture together with Joshua Cabinetry for residential designs.</p>
-                        <center><a href="#" class="btn btn-default">Take a Look!</a></center>
+                        <p>While we primarily specialize in Clinical and Commercial fixtures, we do design and manufacture together alongside Joshua Cabinetry for residential designs.</p>
+                        <center><a class="btn btn-default" <%= link_to "Take a Look!", gallery_residential_path%> </a></center>
                     </div>
                 </div>
             </div>
@@ -88,18 +98,10 @@
                     </div>
                     <div class="panel-body">
                         <p>Our clinical designs follow that of a basic dentist or doctor's office. While we do keep some of our designs basic, we also like to get creative in our designs!</p>
-                        <center><a href="#" class="btn btn-default">Take a Look!</a></center>
+                        <center><a class="btn btn-default" <%= link_to "Take a Look!", gallery_clinical_path%> </a></center>
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- /.row -->
-
-        <!-- Portfolio Section -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header">Gallery</h2>
-            </div>
             <div class="col-md-4 col-sm-6">
                 <%= link_to image_tag("Ulhmann_kitchen (2).png", :class => 'img-responsive img-portfolio img-hover',:size => '700x450') %>
             </div>
@@ -109,17 +111,7 @@
             <div class="col-md-4 col-sm-6">
                 <%= link_to image_tag("Ulhmann_kitchen (2).png", :class => 'img-responsive img-portfolio img-hover',:size => '700x450') %>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <%= link_to image_tag("Ulhmann_kitchen (2).png", :class => 'img-responsive img-portfolio img-hover',:size => '700x450') %>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <%= link_to image_tag("Ulhmann_kitchen (2).png", :class => 'img-responsive img-portfolio img-hover',:size => '700x450') %>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <%= link_to image_tag("Ulhmann_kitchen (2).png", :class => 'img-responsive img-portfolio img-hover',:size => '700x450') %>
-            </div>
-            <a href="#" class="btn btn-default">View More</a>
-            <% #link_to "View More", home_gallery_path, :class => 'btn btn-default', :size => '300x150' %>
+            <center><a href="#" class="btn btn-default">View More</a></center>
         </div>
         <!-- /.row -->
 
