Changes made to gallery home pages

--- a/app/views/gallery/clinical.html.erb
+++ b/app/views/gallery/clinical.html.erb
@@ -18,7 +18,7 @@ v<!DOCTYPE html>
                 <ol class="breadcrumb">
                     <li><%= link_to "Home", root_path %></li>
                     <li><%= link_to "Gallery", home_gallery_path%></li>
-                    <li class="active">Residential Gallery</li>
+                    <li class="active">Clinical Gallery</li>
                 </ol>
             </div>
         </div>
@@ -32,9 +32,9 @@ v<!DOCTYPE html>
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Residential</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+                <h3>Yelisetty</h3>
+                <h4></h4>
+                <p></p>
                 <a class="btn btn-primary" href="portfolio-item.html">View Project</i></a>
             </div>
         </div>
@@ -50,9 +50,9 @@ v<!DOCTYPE html>
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Commercial</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
+                <h3>Cheang DDS</h3>
+                <h4></h4>
+                <p></p>
                 <a class="btn btn-primary" href="portfolio-item.html">View Project</i></a>
             </div>
         </div>
@@ -60,59 +60,7 @@ v<!DOCTYPE html>
 
         <hr>
 
-        <!-- Project Three -->
-        <div class="row">
-            <div class="col-md-7">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x300" alt="">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h3>Clinical</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
-                <a class="btn btn-primary" href="portfolio-item.html">View Project</i></a>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
-        <!-- Project Four -->
-        <div class="row">
-
-            <div class="col-md-7">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x300" alt="">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h3>Gallery Four</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
-                <a class="btn btn-primary" href="portfolio-item.html">View Project</i></a>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
-        <!-- Project Five -->
-        <div class="row">
-            <div class="col-md-7">
-                <a href="#">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x300" alt="">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h3>Gallery Five</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, quo, minima, inventore voluptatum saepe quos nostrum provident ex quisquam hic odio repellendus atque porro distinctio quae id laboriosam facilis dolorum.</p>
-                <a class="btn btn-primary" href="#">View Project</i></a>
-            </div>
-        </div>
-        <!-- /.row -->
-
+        
         <hr>
 
         <!-- Pagination -->
@@ -124,12 +72,6 @@ v<!DOCTYPE html>
                     </li>
                     <li class="active">
                         <a href="#">1</a>
-                    </li>
-                    <li>
-                        <a href="#">2</a>
-                    </li>
-                    <li>
-                        <a href="#">3</a>
                     </li>
                     <li>
                         <a href="#">&raquo;</a>
