--- a/app/views/gallery/commercial.html.erb
+++ b/app/views/gallery/commercial.html.erb
@@ -32,9 +32,9 @@
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Commercial</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+                <h3>Bamboo Pillow</h3>
+                <h4>Mall Kiosks</h4>
+                <p></p>
                 <a class="btn btn-primary" href="portfolio-item.html">View Project</i></a>
             </div>
         </div>
@@ -50,9 +50,9 @@
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Commercial</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
+                <h3>Atlanta Braves</h3>
+                <h4>Restaurant & Bar</h4>
+                <p></p>
                 <a class="btn btn-primary" href="portfolio-item.html">View Project</i></a>
             </div>
         </div>
@@ -68,8 +68,8 @@
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Clinical</h3>
-                <h4>Subheading</h4>
+                <h3>Mac Lab</h3>
+                <h4>Bakery</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
                 <a class="btn btn-primary" href="portfolio-item.html">View Project</i></a>
             </div>
@@ -124,13 +124,7 @@
                     </li>
                     <li class="active">
                         <a href="#">1</a>
-                    </li>
-                    <li>
-                        <a href="#">2</a>
-                    </li>
-                    <li>
-                        <a href="#">3</a>
-                    </li>
+                    </li>                   
                     <li>
                         <a href="#">&raquo;</a>
                     </li>
