--- a/app/views/gallery/residential.html.erb
+++ b/app/views/gallery/residential.html.erb
@@ -32,9 +32,9 @@
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Residential</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+                <h3>Kitchens</h3>
+                <h4></h4>
+                <p></p>
                 <a class="btn btn-primary" href="portfolio-item.html">View Project</i></a>
             </div>
         </div>
@@ -50,9 +50,9 @@
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Commercial</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
+                <h3>Home Offices</h3>
+                <h4></h4>
+                <p></p>
                 <a class="btn btn-primary" href="portfolio-item.html">View Project</i></a>
             </div>
         </div>
@@ -68,8 +68,8 @@
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Clinical</h3>
-                <h4>Subheading</h4>
+                <h3>Entertainment Centers</h3>
+                <h4></h4>
                 <p></p>
                 <a class="btn btn-primary" href="portfolio-item.html">View Project</i></a>
             </div>
@@ -77,38 +77,19 @@
         <!-- /.row -->
 
         <hr>
-
-        <!-- Project Four -->
+        
+        <!-- Project Three -->
         <div class="row">
-
             <div class="col-md-7">
                 <a href="portfolio-item.html">
                     <img class="img-responsive img-hover" src="http://placehold.it/700x300" alt="">
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Gallery Four</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
+                <h3>Closets</h3>
+                <h4></h4>
+                <p></p>
                 <a class="btn btn-primary" href="portfolio-item.html">View Project</i></a>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
-        <!-- Project Five -->
-        <div class="row">
-            <div class="col-md-7">
-                <a href="#">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x300" alt="">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h3>Gallery Five</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, quo, minima, inventore voluptatum saepe quos nostrum provident ex quisquam hic odio repellendus atque porro distinctio quae id laboriosam facilis dolorum.</p>
-                <a class="btn btn-primary" href="#">View Project</i></a>
             </div>
         </div>
         <!-- /.row -->
@@ -126,12 +107,6 @@
                         <a href="#">1</a>
                     </li>
                     <li>
-                        <a href="#">2</a>
-                    </li>
-                    <li>
-                        <a href="#">3</a>
-                    </li>
-                    <li>
                         <a href="#">&raquo;</a>
                     </li>
                 </ul>
@@ -140,6 +115,8 @@
         <!-- /.row -->
 
         <hr>
+
+        
 
         
     </div>
