--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -48,7 +48,7 @@
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
                     <div class="caption">
                         <h3>Chris Pham<br>
-                            <small>CEO/Cad Engineer</small>
+                            <small>CEO/Founder</small>
                         </h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
                         <ul class="list-inline">
@@ -67,7 +67,7 @@
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
                     <div class="caption">
                         <h3>Sean Brightman<br>
-                            <small>CFO/CTO</small>
+                            <small>Purchasing Manager</small>
                         </h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
                         <ul class="list-inline">
@@ -142,8 +142,8 @@
                 <div class="thumbnail">
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
                     <div class="caption">
-                        <h3>John Doe<br>
-                            <small>Job Title</small>
+                        <h3>Joshua Cabinetry<br>
+                            <small>Residential Division</small>
                         </h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
                         <ul class="list-inline">
