--- a/app/views/products/clinical.html.erb
+++ b/app/views/products/clinical.html.erb
@@ -19,15 +19,15 @@
                     <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Products
+                <h1 class="page-header">Clinical
                 </h1>
                 <ol class="breadcrumb">
                     <li><%= link_to "Home", root_path %></li>
-                    <li class="active">Products</li>
+                    <li class="active">Clinical</li>
                 </ol>
             </div>
         </div>
-                    <a class="list-group-item" <%= link_to "Clinical", products_clinical_path%></a>
+                    <a class="list-group-item">Clinical</a>
                     <a href="#" class="list-group-item">Commercial</a>
                     <a href="#" class="list-group-item">Residential</a>
                     <a href="#" class="list-group-item">Salon</a>
@@ -96,7 +96,7 @@
                             <img src="http://placehold.it/320x150" alt="">
                             <div class="caption">
                                 <h4 class="pull-right">$649.99</h4>
-                                <h4><a href="#">Second Product</a>
+                                <h4><a href="#">2nd Product</a>
                                 </h4>
                                 <p>This is a short description. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                             </div>
