added progress page for unfinished

--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -41,7 +41,7 @@
                 <p><i class="fa fa-phone"></i> 
                     <abbr title="Phone">P</abbr>: (404) 263-0323</p>
                 <p><i class="fa fa-envelope-o"></i> 
-                    <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">customerservice@ssdmfg.com</a>
+                    <abbr title="Email">E</abbr>: <a href="mailto:customerservice@ssdmfg.com">customerservice@ssdmfg.com</a>
                 </p>
                 <p><i class="fa fa-clock-o"></i> 
                     <abbr title="Hours">H</abbr>: Monday - Friday: 9:00 AM to 4:00 PM</p>
