--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,7 +25,7 @@
                         <%= link_to "Services", home_services_path %>
                     </li>
                     <li>
-                        <%= link_to "Product", home_products_path %>
+                        <%= link_to "Product", home_progress_path %>
                     </li>
                     <li>
                         <%= link_to "Gallery", home_gallery_path %>
