--- a/app/views/home/services.html.erb
+++ b/app/views/home/services.html.erb
@@ -110,7 +110,7 @@
                     </li>
                     <li class=""><a href="#service-three" data-toggle="tab"><i class="fa fa-support"></i> Manufacture</a>
                     </li>
-                    <li class=""><a href="#service-four" data-toggle="tab"><i class="fa fa-database"></i> Deliver/Installation</a>
+                    <li class=""><a href="#service-four" data-toggle="tab"><i class="fa fa-database"></i> Delivery/Installation</a>
                     </li>
                 </ul>
 
@@ -128,7 +128,7 @@
                         <p>The process of manufacturing your product will take place in our own factory. Running through our line of production your product will be fabricated as illustrated by the design generated in the CAD process. Before releasing, your product will be handled by our floor team to ensure quality is met.  </p>
                     </div>
                     <div class="tab-pane fade" id="service-four">
-                        <h4>Deliver/Installation</h4>
+                        <h4>Delivery/Installation</h4>
                         <p> Unfortunately we only deliver to local businesses and residential areas. We do however offer various shipping methods depending on the size and weight of your product. If you need the product shipped then we will quote you on shipping before proceeding with the delivery process of your product. Alternatively, you can schedule your own shipment methods such as "Pick-Up" or have it shipped through a preferred carrier of your choice.</p>
                     </div>
                 </div>
