--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -32,8 +32,13 @@
             <div class="col-md-6">
                 <h2>About Solid Solutions Design</h2>
                 <p>Solid Solutions Design </p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut sequi pedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit dolorum!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
+                <p>
+                Solid Solutions Design LLC is a Clinical, Commercial, and Residential manufacturing company. 
+                Majority of the products are designed and manufactured at our facility located in Chamblee, Georgia.
+                </p>
+                <p>
+                We offer many unique services that include designing and manufacturing custom fixtures based upon customer request.
+                </p>
             </div>
         </div>
         <!-- /.row -->
@@ -50,7 +55,7 @@
                         <h3>Chris Pham<br>
                             <small>CEO/Founder</small>
                         </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
+                        <p></p>
                         <ul class="list-inline">
                             <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
                             </li>
@@ -69,7 +74,7 @@
                         <h3>Sean Brightman<br>
                             <small>Purchasing Manager</small>
                         </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
+                        <p></p>
                         <ul class="list-inline">
                             <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
                             </li>
@@ -88,7 +93,7 @@
                         <h3>Ro Kim<br>
                             <small>Plant Manager</small>
                         </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
+                        <p></p>
                         <ul class="list-inline">
                             <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
                             </li>
@@ -107,7 +112,7 @@
                         <h3>Wuth<br>
                             <small>CAD Engineer/CNC Machinist</small>
                         </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
+                        <p></p>
                         <ul class="list-inline">
                             <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
                             </li>
@@ -123,10 +128,10 @@
                 <div class="thumbnail">
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
                     <div class="caption">
-                        <h3>The Guys<br>
+                        <h3>The Crew<br>
                             <small>Builders</small>
                         </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
+                        <p></p>
                         <ul class="list-inline">
                             <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
                             </li>
@@ -145,7 +150,7 @@
                         <h3>Joshua Cabinetry<br>
                             <small>Residential Division</small>
                         </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
+                        <p></p>
                         <ul class="list-inline">
                             <li><a href="#"><i class="fa fa-2x fa-facebook-square"></i></a>
                             </li>
