changed links to progress page until completion

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,16 +19,16 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <%= link_to "About", home_about_path %>
+                        <%= link_to "About", home_progress_path %>
                     </li>
                     <li>
-                        <%= link_to "Services", home_services_path %>
+                        <%= link_to "Services", home_progress_path %>
                     </li>
                     <li>
                         <%= link_to "Product", home_progress_path %>
                     </li>
                     <li>
-                        <%= link_to "Gallery", home_gallery_path %>
+                        <%= link_to "Gallery", home_progress_path %>
                     </li>
                     <li> 
                         <%= link_to "Contact", home_contact_path %>
