changed incomplete pages to progress

--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -41,7 +41,7 @@
                 <p><i class="fa fa-phone"></i> 
                     <abbr title="Phone">P</abbr>: (404) 263-0323</p>
                 <p><i class="fa fa-envelope-o"></i> 
-                    <abbr title="Email">E</abbr>: <a href="mailto:customerservice@ssdmfg.com">customerservice@ssdmfg.com</a>
+                    <abbr title="Email">E</abbr>: <a href="mailto:chris@ssdmfg.com">Chris@ssdmfg.com</a> or <a href="mailto:sean@ssdmfg.com">Sean@ssdmfg.com</a>
                 </p>
                 <p><i class="fa fa-clock-o"></i> 
                     <abbr title="Hours">H</abbr>: Monday - Friday: 9:00 AM to 4:00 PM</p>
@@ -107,7 +107,7 @@
                     </h4>
                     <h3>
                         <p>Ready to place an order?</p>
-                    <a class="btn btn-default btn-block" <%= link_to "Order Now", home_contact_path %></a>
+                    <a class="btn btn-default btn-block" <%= link_to "Order Now", home_progress_path %></a>
                     </h3>
                 </ul>
             </div>
